2010-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/sort.c:
   Replace free() by g_free() (patch by Daniel Marjamaki, thanks).


2010-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c:
   Print locale information in debug output.
 * src/build.c:
   Fix some labels which were marked as translatable but were not
   handled properly by gettext().
   Add a missing const.
 * src/msgwindow.c:
   Try to convert text into UTF-8 before adding it to the Compiler and
   Messages Window (closes #3007919).


2010-05-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/Makefile.am, src/Makefile.am, tagmanager/Makefile.am,
   wscript:
   Pass G_LOG_DOMAIN to source files for better logging.


2010-05-24  Frank Lanitz  <frank@frank.uvena.de>

 * THANKS, src/about.c:
   Update of translation credits to reflect a change on Spanish
   translation team better.


2010-05-23  Lex Trotman  <elextr.at.gmail.dot.com>

 * src/build.c:
   Fix infinite loop reading build command output


2010-05-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/msgwindow.c:
   Fix duplicate accelerators for Clear and Copy in the
   Messages Window popup menu.
 * src/pluginutils.c:
   Expand child widgets in the Plugin Preferences dialog
   (patch by Colomban Wendling, thanks).


2010-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Fix Undo/Redo button state after the last document has been closed.
   Add Print and Replace toolbar items to the list of document
   sensitive widgets.
 * src/toolbar.c:
   Fix crash when the toolbar is reloaded without any open documents.
 * src/build.c:
   Fix Run toolbar item sensitivity after the last document has been
   closed.
 * plugins/classbuilder.c:
   Remove two unnecessary g_strdups().
 * doc/geany.html, doc/geany.txt, src/keyfile.c, src/msgwindow.c,
   src/plugindata.h, src/ui_utils.h:
   Add hidden preference to disable automatic scrolling in the