@@ -2,6 +2,9 @@
 
  * tagmanager/sort.c:
    Replace free() by g_free() (patch by Daniel Marjamaki, thanks).
+ * tagmanager/c.c:
+   Fix parsing of C++ classes contain attributes with bitfields
+   (patch by Lex Trotman, thanks).
 
 
 2010-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
